--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,28 @@
 #
 #    pip-compile requirements.in
 #
+aiohttp==3.7.4.post0
+    # via -r requirements.in
+async-timeout==3.0.1
+    # via aiohttp
+attrs==21.2.0
+    # via aiohttp
 bidict==0.21.3
     # via python-socketio
+chardet==4.0.0
+    # via aiohttp
 cycler==0.10.0
     # via matplotlib
+idna==3.2
+    # via yarl
 kiwisolver==1.3.2
     # via matplotlib
 matplotlib==3.4.3
     # via -r requirements.in
+multidict==5.2.0
+    # via
+    #   aiohttp
+    #   yarl
 numpy==1.21.2
     # via
     #   -r requirements.in
@@ -37,3 +51,7 @@ six==1.16.0
     # via
     #   cycler
     #   python-dateutil
+typing-extensions==3.10.0.2
+    # via aiohttp
+yarl==1.7.0
+    # via aiohttp
