--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,8 @@ python-dateutil==2.8.2
     #   pandas
 python-engineio==4.2.1
     # via python-socketio
+python-levenshtein==0.12.2
+    # via -r requirements.in
 python-socketio==5.4.0
     # via -r requirements.in
 pytz==2021.1
@@ -57,3 +59,6 @@ unidecode==1.3.2
     # via -r requirements.in
 yarl==1.7.0
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
